--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ li<!DOCTYPE html>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Personal Portfolio Website Design | Deepak Pardhi</title>
+    <title>Responsive Personal Portfolio Website Design | Deepak Pardhi </title>
  
     <!-- box icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -40,16 +40,17 @@ li<!DOCTYPE html>
         <h1> Deepak Pardhi </h1>
         <h3>And I'm a <span class="multiple-text"></span></h3>
         <p>Welcome to my dynamic portfolio! I'm Deepak Pardhi, <br>
-          excelling in Data Science, Frontend Development,<br>
-           and Database Administration. <br> 
-        </p>
+               excelling in Data Science, Frontend Development,<br>
+           and Database Administration. <br>
+          My projects epitomize data-driven insights,<br>
+           </p>
          <div class="social-media">
             <a href=""><i class='bx bxl-facebook'></i></a>
             <a href="https://github.com/deepakp1267" target="_blank"><i class='bx bxl-github'></i></a>
             <a href="#"><i class='bx bxl-instagram-alt'></i></a>
             <a href="https://www.linkedin.com/in/deepak-pardhi-" target="_blank"><i class='bx bxl-linkedin'></i></a>
       </div>
-      <a href="https://drive.google.com/file/d/13SorXMWr9jSjYk9uv7vpVQtA1uxVDKfW/view?usp=drivesdk" target="_blank" class="btn">Download CV</a>
+      <a href="https://drive.google.com/file/d/1IW-HaXlkY_Tm7Ya81r51oFt4igd5lC3W/view?usp=drivesdk" target="_blank" class="btn">Download CV</a>
     </div>
 
        <div class="home-img">
@@ -131,13 +132,9 @@ li<!DOCTYPE html>
           <div class="portfolio-box">
             <img src="Images/portfolio1.jpg" alt="">
             <div class="portfolio-layer">
-              <h4>"Titanic Survival Prediction using Machine Learning"</h4>
-              <p>Employed machine learning algorithms to analyze passenger data and predict survival outcomes. 
-                By examining factors such as age, class, and gender, the project achieved accurate predictions.
-                 This effort provides valuable insights into historical events,
-                  while showcasing the significance of data-driven methodologies in understanding complex scenarios. 
-                  The application of machine learning highlights its potential to unravel patterns and enhance predictive capabilities,
-                 contributing to a deeper understanding of past events.</p>
+              <h4>"Titanic Survival Analysis"</h4>
+              <p>Using machine learning, the project predicted passenger survival based on age, class, and gender.
+                 It revealed historical insights and emphasized data-driven understanding of complex events..</p>
                  <a href="https://github.com/deepakp1267/Bharat-Intern-Data-Science-Task2-Titanic-Survival-.git" target="_blank"><i class='bx bx-link-external'></i></a>
             </div>
           </div>
@@ -145,13 +142,9 @@ li<!DOCTYPE html>
             <div class="portfolio-box">
               <img src="Images/portfolio2.jpg" alt="">
               <div class="portfolio-layer">
-                <h4>"MSFT-Stock-Predication-using-LSTM"</h4>
-                <p>Leveraged Long Short-Term Memory (LSTM) neural networks to forecast Microsoft stock prices. 
-                  By analyzing sequential data patterns, the project achieved accurate predictions, aiding investors in informed decision-making.
-                   Enhanced understanding of market trends, volatility, and potential risks contributes to optimizing investment strategies and
-                    portfolio management. The application of advanced deep learning techniques showcases the potential of artificial intelligence in
-                     financial forecasting,
-                   highlighting its role in shaping modern investment practices.</p>
+                <h4>"MSFT Stock LSTM"</h4>
+                <p>Utilizing LSTM neural networks, the project accurately forecasted Microsoft stock prices by analyzing sequential data patterns. 
+                  This informed investors, optimizing strategies through AI-powered financial forecasting.</p>
                    <a href="https://github.com/deepakp1267/MSFT-Stock-Predication-using-LSTM.git" target="_blank"><i class='bx bx-link-external'></i></a>
               </div>
             </div>
@@ -159,12 +152,9 @@ li<!DOCTYPE html>
               <div class="portfolio-box">
                 <img src="Images/portfolio3.jpg" alt="">
                 <div class="portfolio-layer">
-                  <h4>"Income Predication:Predict-Future-Income-Of-Canadian-Person"</h4>
-                  <p>Utilizing past data, this project employs advanced data analysis and machine learning techniques to
-                     forecast future income for Canadians. By integrating economic indicators and predictive models,
-                      it offers valuable insights for financial planning, loan evaluation, and policy formulation. 
-                      This initiative facilitates informed decision-making, empowers individuals and financial institutions, 
-                    and contributes to a more stable and prosperous financial environment, enhancing overall economic well-being and resilience.</p>
+                  <h4>"Canadian Income Forecasting"</h4>
+                  <p>Using advanced data analysis and machine learning, the project predicts future Canadian income by integrating economic indicators. 
+                    This empowers financial planning, informed decisions, and economic well-being.</p>
                      <a href="https://github.com/deepakp1267/-Income-Predication---Predict-Future-Income-Of-Canadian-Person-based-on-Past-Data.git" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
               </div>
@@ -182,12 +172,8 @@ li<!DOCTYPE html>
                     <img src="Images/portfolio5.jpg" alt="">
                     <div class="portfolio-layer">
                       <h4>"Movie Recommendation System"</h4>
-                      <p>Engineered an intelligent platform employing collaborative filtering and content-based approaches. 
-                        Leveraged user behaviors, film attributes, and historical interactions to deliver personalized movie suggestions. 
-                        This endeavor exemplifies the potency of data-driven methodologies in enriching user engagement, amplifying content discovery, 
-                        and elevating user satisfaction within the entertainment domain. The implementation of advanced algorithms underscores 
-                        machine learning's potential to curate tailored recommendations, thereby enhancing user experiences and 
-                        facilitating seamless content selection.</p>
+                      <p>Built a smart platform with collaborative filtering and content-based techniques for personalized movie suggestions,
+                         enhancing engagement and content discovery through data-driven methods and advanced algorithms..</p>
                          <a href="https://github.com/deepakp1267/Kaggle-Movie-Recommendation.git" target="_blank"><i class='bx bx-link-external'></i></a>
                     </div>
                   </div>
