--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@ li<!DOCTYPE html>
         <h3>Hello, It's Me </h3>
         <h1> Deepak Pardhi </h1>
         <h3>And I'm a <span class="multiple-text"></span></h3>
-        <p>Welcome to my dynamic portfolio! I'm Deepak Pardhi, <br>
-               excelling in Data Science, Frontend Development,<br>
-           and Database Administration. <br>
-          My projects epitomize data-driven insights,<br>
+        <p>
+Welcome to my dynamic portfolio! I'm Deepak Pardhi, a professional with expertise in Data Science, Frontend Development, and Database Administration. 
+          My portfolio showcases projects that leverage data-driven insights, combining my skills to deliver innovative solutions.
+          Explore my work to see how I transform data into actionable results,
+          create user-friendly interfaces, and ensure efficient data management through database administration.<br>
            </p>
          <div class="social-media">
             <a href=""><i class='bx bxl-facebook'></i></a>
