--- a/index.html
+++ b/index.html
@@ -98,27 +98,24 @@ Welcome to my dynamic portfolio! I'm Deepak Pardhi, a professional with expertis
         <div class="services-box">
           <i class='bx bxs-paint'></i>
           <h3>Graphic Design</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Delectus quas quo adipisci dolorem ducimus 
-            et vel dolore sequi accusantium nesciunt!</p>
+          <p>Graphic design combines visual elements and typography to create impactful visuals for various purposes,
+            from advertising and branding to web design, publications, and communication, fostering effective visual communication.</p>
          <a href="#" target="_blank" class="btn">Read More</a>  
         </div>
 
         <div class="services-box">
           <i class='bx bx-code-alt' ></i>
           <h3>Web Development</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Delectus quas quo adipisci dolorem ducimus 
-            et vel dolore sequi accusantium nesciunt!</p>
+          <p>Web development encompasses designing, coding, and maintaining websites and web applications. 
+            It involves programming languages, databases, and frameworks to create functional and visually appealing online experiences.</p>
          <a href="#" target="_blank" class="btn">Read More</a>  
         </div>
 
         <div class="services-box">
           <i class='bx bx-bar-chart-alt'></i>
-          <h3>Digital Marketing</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Delectus quas quo adipisci dolorem ducimus 
-            et vel dolore sequi accusantium nesciunt!</p>
+          <h3>Internet of Things</h3>
+          <p>IoT, or Internet of Things, connects devices via the internet, enhancing efficiency,
+            convenience, and data-driven decision-making across industries and everyday life.!</p>
          <a href="#" target="_blank" class="btn">Read More</a>  
         </div>
       </div>
@@ -195,10 +192,9 @@ Welcome to my dynamic portfolio! I'm Deepak Pardhi, a professional with expertis
      <section class="contact" id="contact">
          <h2 class="heading">Contact <span>Me</span></h2>
          <h5>Let's Work Together</h5>
-         <p>Lorem ipsum dolor sit amet consectetur,
-           adipisicing elit. Cum, ullam.</p>
+      
          <div class="contact-list">
-          <li><box-icon type='solid' name='envelope'></box-icon>><li>pardhideepak1267@gmail.com</li>
+          <li><<box-icon type='logo' name='gmail'></box-icon>'>><li>pardhideepak1267@gmail.com</li>
           <li><i class='bx bxs-phone'></i>9657428145</li>
 
          </div>
