--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@ li<!DOCTYPE html>
         <h1> Deepak Pardhi </h1>
         <h3>And I'm a <span class="multiple-text"></span></h3>
         <p>
-Welcome to my dynamic portfolio! I'm Deepak Pardhi, a professional with expertise in Data Science, Frontend Development, and Database Administration. 
-          My portfolio showcases projects that leverage data-driven insights, combining my skills to deliver innovative solutions.
-          Explore my work to see how I transform data into actionable results,
-          create user-friendly interfaces, and ensure efficient data management through database administration.<br>
+Welcome to my dynamic portfolio! I'm Deepak Pardhi,<br>
+          a professional with expertise in Data Science, Frontend Development, and Database Administration. <br>
+          My portfolio showcases projects that leverage data-driven insights, <br>combining my skills to deliver innovative solutions.
+          
            </p>
          <div class="social-media">
             <a href=""><i class='bx bxl-facebook'></i></a>
@@ -194,7 +194,7 @@ Welcome to my dynamic portfolio! I'm Deepak Pardhi, a professional with expertis
          <h5>Let's Work Together</h5>
       
          <div class="contact-list">
-          <li><<box-icon type='logo' name='gmail'></box-icon>'>><li>pardhideepak1267@gmail.com</li>
+          <li><box-icon type='logo' name='gmail'></box-icon><li>pardhideepak1267@gmail.com</li>
           <li><i class='bx bxs-phone'></i>9657428145</li>
 
          </div>
