--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ li<!DOCTYPE html>
         <p>
 Welcome to my dynamic portfolio! I'm Deepak Pardhi,<br>
           a professional with expertise in Data Science, Frontend Development, and Database Administration. <br>
-          My portfolio showcases projects that leverage data-driven insights, <br>combining my skills to deliver innovative solutions.
+          My portfolio showcases projects that leverage data-driven insights.
           
            </p>
          <div class="social-media">
